--- a/KakeiboApp/AppShell.xaml
+++ b/KakeiboApp/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="KakeiboApp.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:KakeiboApp"
+    xmlns:local="clr-namespace:KakeiboApp.Pages"
     Title="KakeiboApp">
 
     <ShellContent
