MainPageを削除し、AppShell.xamlでTransactionPageを設定

--- a/KakeiboApp/AppShell.xaml
+++ b/KakeiboApp/AppShell.xaml
@@ -7,7 +7,7 @@
     Title="KakeiboApp">
 
     <ShellContent
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:TransactionPage}"
+        Route="TransactionPage" />
 
 </Shell>
