AppShell.xamlとMauiProgram.csの更新: EditTransactionPageの追加とViewModelの登録

--- a/KakeiboApp/AppShell.xaml
+++ b/KakeiboApp/AppShell.xaml
@@ -8,6 +8,11 @@
 
     <ShellContent
         ContentTemplate="{DataTemplate local:TransactionPage}"
-        Route="TransactionPage" />
+        Route="TransactionPage"
+        Title="TransactionPage" />
+    <ShellContent
+        ContentTemplate="{DataTemplate local:EditTransactionPage}"
+        Route="EditTransactionPage"
+        Title="EditTransactionPage" />
 
 </Shell>
