--- a/KakeiboApp/Pages/TransactionPage.xaml
+++ b/KakeiboApp/Pages/TransactionPage.xaml
@@ -26,7 +26,6 @@
         </ListView>
         <Button Text="Add Transaction"
                 Command="{Binding GoToEditCommand}"
-                HorizontalOptions="Center"
-                x:DataType="viewModel:TransactionViewModel" />
+                HorizontalOptions="Center"/>
     </VerticalStackLayout>
 </ContentPage>
