--- a/KakeiboApp/App.xaml
+++ b/KakeiboApp/App.xaml
@@ -2,13 +2,15 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:KakeiboApp"
+             xmlns:converters="clr-namespace:KakeiboApp.Converters;assembly=KakeiboApp"
              x:Class="KakeiboApp.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
-                <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
+                <ResourceDictionary Source="Resources/Styles/Colors.xaml"/>
+                <ResourceDictionary Source="Resources/Styles/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <converters:TransactionTypeToBoolConverter x:Key="TransactionTypeToBoolConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
