EditTransactionPage の更新とそれに伴うconverterの追加

--- a/KakeiboApp/App.xaml
+++ b/KakeiboApp/App.xaml
@@ -11,6 +11,8 @@
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <converters:TransactionTypeToBoolConverter x:Key="TransactionTypeToBoolConverter"/>
+            <converters:AmountToCurrencyConverter x:Key="AmountToCurrencyConverter"/>
+            <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
