--- a/KakeiboApp/App.xaml
+++ b/KakeiboApp/App.xaml
@@ -14,6 +14,7 @@
             <converters:AmountToCurrencyConverter x:Key="AmountToCurrencyConverter"/>
             <converters:InverseBoolConverter x:Key="InverseBoolConverter"/>
             <converters:TransactionTypeConverter x:Key="TransactionTypeConverter"/>
+            <converters:CategoryTypeFilterConverter x:Key="CategoryTypeFilterConverter"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
