--- a/KakeiboApp/Pages/EditTransactionPage.xaml
+++ b/KakeiboApp/Pages/EditTransactionPage.xaml
@@ -37,15 +37,10 @@
                     <Binding Path="Name"
                              x:DataType="model:Account"/>
                 </Picker.ItemDisplayBinding>
-                <Picker.Behaviors>
-                    <behaviors:FocusManagerBehavior NextElement="{x:Reference IncomeCategoryPicker}"/>
-                </Picker.Behaviors>
             </Picker>
-            <Picker x:Name="IncomeCategoryPicker"
-                    Title="分類"
+            <Picker Title="分類"
                     ItemsSource="{Binding Categories, Converter={StaticResource CategoryTypeFilterConverter}, ConverterParameter=Income}"
-                    SelectedItem="{Binding SelectedCategory}"
-                    SelectedIndexChanged="OnCategoryPickerChanged">
+                    SelectedItem="{Binding SelectedCategory}">
                 <Picker.ItemDisplayBinding>
                     <Binding Path="Name"
                              x:DataType="model:Category"/>
@@ -62,15 +57,10 @@
                     <Binding Path="Name"
                              x:DataType="model:Account"/>
                 </Picker.ItemDisplayBinding>
-                <Picker.Behaviors>
-                    <behaviors:FocusManagerBehavior NextElement="{x:Reference ExpenseCategoryPicker}"/>
-                </Picker.Behaviors>
             </Picker>
-            <Picker x:Name="ExpenseCategoryPicker"
-                    Title="分類"
+            <Picker Title="分類"
                     ItemsSource="{Binding Categories, Converter={StaticResource CategoryTypeFilterConverter}, ConverterParameter=Expense}"
-                    SelectedItem="{Binding SelectedCategory}"
-                    SelectedIndexChanged="OnCategoryPickerChanged">
+                    SelectedItem="{Binding SelectedCategory}">
                 <Picker.ItemDisplayBinding>
                     <Binding Path="Name"
                              x:DataType="model:Category"/>
@@ -87,15 +77,10 @@
                     <Binding Path="Name"
                              x:DataType="model:Account"/>
                 </Picker.ItemDisplayBinding>
-                <Picker.Behaviors>
-                    <behaviors:FocusManagerBehavior NextElement="{x:Reference ToAccountPicker}"/>
-                </Picker.Behaviors>
             </Picker>
-            <Picker x:Name="ToAccountPicker"
-                    Title="入金"
+            <Picker Title="入金"
                     ItemsSource="{Binding Accounts}"
-                    SelectedItem="{Binding ToAccount}"
-                    SelectedIndexChanged="OnCategoryPickerChanged">
+                    SelectedItem="{Binding ToAccount}">
                 <Picker.ItemDisplayBinding>
                     <Binding Path="Name"
                              x:DataType="model:Account"/>
@@ -107,19 +92,16 @@
         <StackLayout>
 
             <!-- 表示モード -->
-            <Label x:Name="AmountEntry"
-                Text="{Binding Amount, Converter={StaticResource AmountToCurrencyConverter}}"
+            <Label Text="{Binding Amount, Converter={StaticResource AmountToCurrencyConverter}}"
                    IsVisible="{Binding IsEditingAmount, Converter={StaticResource InverseBoolConverter}}"
-                   FontSize="24"
-                   TextColor="Black">
+                   FontSize="24">
                 <Label.GestureRecognizers>
                     <TapGestureRecognizer Command="{Binding StartEditingAmountCommand}"/>
                 </Label.GestureRecognizers>
             </Label>
 
             <!-- 編集モード -->
-            <Entry
-                   Text="{Binding Amount, Mode=TwoWay}"
+            <Entry Text="{Binding Amount, Mode=TwoWay}"
                    Keyboard="Numeric"
                    FontSize="24"
                    IsVisible="{Binding IsEditingAmount}"
