ApplicationTitle の変更とぺーじのタイトルの削除

--- a/KakeiboApp/AppShell.xaml
+++ b/KakeiboApp/AppShell.xaml
@@ -8,6 +8,5 @@
 
     <ShellContent
         ContentTemplate="{DataTemplate local:TransactionPage}"
-        Route="TransactionPage"
-        Title="TransactionPage" />
+        Route="TransactionPage"/>
 </Shell>
