--- a/KakeiboApp/Pages/TransactionPage.xaml
+++ b/KakeiboApp/Pages/TransactionPage.xaml
@@ -12,10 +12,22 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0"
-               Text="家計簿"
-               FontSize="24"
-               HorizontalOptions="Center"/>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0"
+                    Text="←"
+                    Command="{Binding PreviousMonthCommand}"/>
+            <Label Grid.Column="1"
+                   Text="{Binding CurrentMonth, StringFormat='{0:yyyy年M月}'}"
+                   HorizontalTextAlignment="Center"/>
+            <Button Grid.Column="2"
+                    Text="→"
+                    Command="{Binding NextMonthCommand}"/>
+        </Grid>
 
         <CollectionView Grid.Row="1"
                         ItemsSource="{Binding Transactions}"
@@ -23,12 +35,34 @@
                         SelectedItem="{Binding SelectedTransaction, Mode=TwoWay}">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:Transaction">
-                    <VerticalStackLayout>
-                        <Label Text="{Binding Date, StringFormat='{0:M月d日(ddd)}'}"/>
-                        <Label Text="{Binding Type, Converter={StaticResource TransactionTypeConverter}}"/>
-                        <Label Text="{Binding Category.Name}"/>
-                        <Label Text="{Binding Amount, StringFormat='{0:C}'}"/>
-                    </VerticalStackLayout>
+                    <Grid Padding="10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Grid.RowSpan="2"
+                               Grid.Column="0"
+                               Text="{Binding Date, StringFormat='{0:M月d日(ddd)}'}"/>
+                        <Label Grid.Column="1"
+                               Text="{Binding Type, Converter={StaticResource TransactionTypeConverter}}"/>
+                        <Label Grid.Column="2"
+                               Text="{Binding Category.Name}"/>
+                        <Label Grid.Row="1"
+                               Grid.Column="1"
+                               Text="{Binding FromAccount.Name}"/>
+                        <Label Grid.Row="1"
+                               Grid.Column="2"
+                               Text="{Binding ToAccount.Name}"/>
+                        <Label Grid.RowSpan="2"
+                               Grid.Column="3"
+                               Text="{Binding Amount, StringFormat='{0:C}'}"/>
+                    </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
