--- a/KakeiboApp/Pages/TransactionPage.xaml
+++ b/KakeiboApp/Pages/TransactionPage.xaml
@@ -5,6 +5,17 @@
              xmlns:viewModel="clr-namespace:KakeiboApp.ViewModels;assembly=KakeiboApp.ViewModel"
              xmlns:model="clr-namespace:KakeiboApp.Core.Models;assembly=KakeiboApp.Core"
              x:DataType="viewModel:TransactionViewModel">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <DataTemplate x:Key="TransactionGroupHeaderTemplate"
+                          x:DataType="model:MonthlyTransactionGroup">
+                <Label Text="{Binding MonthLabel}"
+                       FontAttributes="Bold"
+                       BackgroundColor="LightGray"
+                       Padding="8"/>
+            </DataTemplate>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -12,27 +23,12 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="50"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="50"/>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"
-                    Text="←"
-                    Command="{Binding PreviousMonthCommand}"/>
-            <Label Grid.Column="1"
-                   Text="{Binding CurrentMonth, StringFormat='{0:yyyy年M月}'}"
-                   HorizontalTextAlignment="Center"/>
-            <Button Grid.Column="2"
-                    Text="→"
-                    Command="{Binding NextMonthCommand}"/>
-        </Grid>
-
         <CollectionView Grid.Row="1"
-                        ItemsSource="{Binding Transactions}"
+                        ItemsSource="{Binding MonthlyTransactionGroups}"
                         SelectionMode="Single"
-                        SelectedItem="{Binding SelectedTransaction, Mode=TwoWay}">
+                        SelectedItem="{Binding SelectedTransaction, Mode=TwoWay}"
+                        IsGrouped="True"
+                        GroupHeaderTemplate="{StaticResource TransactionGroupHeaderTemplate}">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:Transaction">
                     <Grid Padding="10">
